Fixed alignment for Start Quiz button and inital Coding Quiz starter page. Fixed alignment of Header/Nav and Footer sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,26 +24,30 @@ main {
 
 /* Header and Nav Styling for High Scores Page Link */
 
-header{
+header {
     width: auto;
     display: flex;
-    margin: 25px, 15px;
+    justify-content: space-between;
+    margin: 25px, 35px;
+    background-color: rgb(232, 232, 232);
 }
 
 nav a {
     display: flex;
-    align-items: left;
     margin: 25px, 20px;
-    padding: 5px;
+    padding: 15px;
+    margin-left: 30px;
     text-decoration: none;
     font-family: var(--font-family);
     color: rgb(77, 3, 77);
     
 }
 
-header .timer {
-    display: flex;
+.timer {
+    display: inline-flex;
+    padding: 15px;
     margin: 25px, 20px;
+    margin-right: 30px;
     font-family: var(--font-family);
 
 }
@@ -51,7 +55,7 @@ header .timer {
 /* Question Section Styling */
 
 .start-quiz {
-    margin: 45px, 20px;
+    margin: 40px, 20px;
     padding: 15px, 20px;
     display: flex;
     align-items: center;
@@ -69,18 +73,19 @@ header .timer {
 }
 
 main h1 {
-    margin: 10px;
+    margin: 20px;
     font-size: 36px;
     font-weight: bold;
 }
 
 main p {
+    text-align: center;
     font-size: 22px;
 
 }
 
 .btn {
-    margin: 55px, 25px;
+    margin: 45px, 25px;
     padding: 15px;
     background-color: rgb(77, 3, 77);
     font-size: 24px;
@@ -91,9 +96,10 @@ main p {
 /* Footer Styling */
 
 footer {
-    margin: 25px;
+    margin: 45px, 25px;
+    padding: 20px;
     display: flex;
-    border-top: 2px solid grey;
-    width: auto;
-    
+    justify-content: center;
+    border-top: 2px solid rgb(232, 232, 232);
+  
 }
